DigicielFull/force-app/main/default/objects/gnx__Legal_entity__c/gnx__Legal_entity__c.object-meta.xml
<CustomObject>
    <label>Entité légale</label>
    <nameField>
        <label>Dénomination de l&apos;entité légale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entités légales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>