DigicielFull/force-app/main/default/objects/gnx__Legal_entity__c/fields/gnx__Logo__c.field-meta.xml
<CustomField>
    <fullName>gnx__Logo__c</fullName>
    <label>Logo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>