DigicielFull/force-app/main/default/objects/gnx__Legal_entity__c/fields/gnx__Postal_code__c.field-meta.xml
<CustomField>
    <fullName>gnx__Postal_code__c</fullName>
    <label>Code postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>