DigicielFull/force-app/main/default/objects/gnx__Legal_entity__c/fields/gnx__Signature__c.field-meta.xml
<CustomField>
    <fullName>gnx__Signature__c</fullName>
    <label>Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>