DigicielFull/force-app/main/default/objects/gnx__Legal_entity__c/fields/gnx__Tax_receipt_prefix__c.field-meta.xml
<CustomField>
    <fullName>gnx__Tax_receipt_prefix__c</fullName>
    <label>Préfixe numéro de reçus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>